# HomeMedicineCabinet

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  idea-notes.md  render.yaml
backend/: .env.structure  alembic.ini  main.py  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  jwt_security.py  logging_config.py
backend/app/db/: connector.py  supabase_auth.py  supabase_client.py
backend/app/utilities/: common.py  const.py  errors.py  types.py
backend/app/v1/: router.py
backend/migrations/: env.py
backend/migrations/versions/: 0e56afa1e4b6_initial_schema.py  2c7067ce3f56_varchar_to_text.py  7726318333b6_add_dismissed_notifications.py  dc9619b00abd_reshape_medication_registry.py
backend/scripts/: find_ir_only_product.py
backend/scripts/registry_import/: __main__.py  loader.py  parser.py
backend/tests/: conftest.py  test_auth.py  test_db.py  test_registry_parser.py
backend/tests/auth/: test_crud.py  test_router.py  test_service.py
backend/tests/cabinet/: test_crud.py  test_facade.py  test_router.py  test_service.py
backend/tests/core/: test_logging_config.py
backend/tests/db/: conftest.py  test_connection.py  test_connector.py  test_supabase_auth.py
backend/tests/fixtures/: registry_sample.xml
backend/tests/integration/: README.md  conftest.py  test_harness_smoke.py
backend/tests/medicines/: test_crud.py  test_router.py  test_service.py
backend/tests/notifications/: test_service.py
backend/tests/registry/: test_parser.py
backend/tests/users/: test_crud.py  test_facade.py  (+2 more)
(+372 files in other folders)
