[project]
name = "home-medicine-cabinet"
version = "0.1.0"
description = "Backend to manage home medicine cabinet"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.48.0",
]
