[project]
name = "home-medicine-cabinet"
version = "0.1.0"
description = "Backend to manage home medicine cabinet"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "sqlmodel>=0.0.22",
    "alembic>=1.16",
    "asyncpg>=0.30",
    "pydantic-settings>=2.5",
    "ruff>=0.15.15",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
